syntax = "proto3";
package pb;
option go_package = 'khoihm1/flight-booking-assignment/pb';

import "google/protobuf/timestamp.proto";

service UserGrpc{
    rpc CreateUser(GrpcCreateUserRequest) returns (GrpcCreateUserResponse){}
    rpc UpdateUser(GrpcUpdateUserRequest) returns (GrpcUpdateUserResponse){}
 }

message GrpcPingUserGrpcRequest {
    string status     =1;
}

message GrpcPingUserGrpcResponse {
    string status     =1;
}

message GrpcCreateUserRequest {
    string username     =1;
    string password     =2;
    string first_name   =3;
    string last_name    =4;
    string address      =5;
    string email        =6;
    string phone_number =7;
}

message GrpcCreateUserResponse {
    string status                           =1;
    string email                            =2;
    bool active                             =3;
    google.protobuf.Timestamp create_at     =4;
}

message GrpcUpdateUserRequest {
    string username     =1;
    string password     =2;
    string first_name   =3;
    string last_name    =4;
    string address      =5;
    string email        =6;
    string phone_number =7;
}

message GrpcUpdateUserResponse {
    string status                           =1;
}